Name:                   tilepin
Version:                0.1
Author:                 Pixelgebra <eatt1029@gmail.com>
Maintainer:             Yun-Yan Chi <jaiyalas@gmail.com>
Cabal-Version:          >= 1.12
Build-Type:             Simple
--
executable main
   default-language: Haskell2010
   hs-source-dirs:   src
   main-is:          Tilepin.hs
   build-depends: base             >= 4 && < 5
                , sdl2             >= 2.0
                , linear
   ghc-options: -O2 -w -main-is Tilepin
